test/corpus/definitions/callback.txt
============================================
Callback definition
============================================

callback DecodeErrorCallback = undefined (DOMException error);

----
(source_file
	(callback_definition
		name: (type_identifier)
		return_type: (undefined_type)
		arguments: (argument_list
			(argument
				type: (type_identifier)
				name: (identifier)
			)
		)
	)
)

============================================
Callback interface definition (empty)
============================================

callback interface EventListener {};

----

(source_file
	(callback_interface_definition
		name: (type_identifier)
		body: (callback_interface_body)
	)
)

============================================
Callback interface definition
============================================

callback interface EventListener {
	undefined handleEvent(Event event);
};

----

(source_file
	(callback_interface_definition
		name: (type_identifier)
		body: (callback_interface_body
			(callback_interface_operation
				return_type: (undefined_type)
				name: (identifier)
				arguments: (argument_list
					(argument
						type: (type_identifier)
						name: (identifier)
					)
				)
			)
		)
	)
)
