test/corpus/definitions/dictionary.txt
============================================
Dictionary definition with inheritance
============================================

dictionary Foo: Bar {};

----
(source_file
	(dictionary_definition
		name: (type_identifier)
		(inheritance
			inheriting: (type_identifier)
		)
		body: (dictionary_body)
	)
)

============================================
Dictionary definition (empty)
============================================

dictionary AudioEncoderInit {};

----
(source_file
	(dictionary_definition
		name: (type_identifier)
		body: (dictionary_body)
	)
)

============================================
Dictionary definition
============================================

dictionary PaintOptions {
	DOMString fillPattern = "black";
	DOMString strokePattern;
	Point position;
};

----
(source_file
	(dictionary_definition
		name: (type_identifier)
		body: (dictionary_body
			(dictionary_member
				type: (string_type)
				name: (identifier)
				default_value: (default
					value: (string))
			)
			(dictionary_member
				type: (string_type)
				name: (identifier)
			)
			(dictionary_member
				type: (type_identifier)
				name: (identifier)
			)
		)
	)
)

============================================
Partial dictionary definition (empty)
============================================

partial dictionary SomeDictionary {};

----
(source_file
	(dictionary_definition
		name: (type_identifier)
		body: (dictionary_body)
	)
)
