test/corpus/definitions/enum_definition.txt
============================================
Enum definition
============================================

enum HardwareAcceleration {
	"no-preference",
	"prefer-hardware",
	"prefer-software",
};

----

(source_file
	(enum_definition
		name: (type_identifier)
		body: (enum_body
			(string)
			(string)
			(string)
		)
	)
)

============================================
Enum definition on a single line
============================================

enum SomeEnum { "test" };

----

(source_file
	(enum_definition
		name: (type_identifier)
		body: (enum_body
			(string)
		)
	)
)
