test/corpus/extended_attributes.txt
============================================
Extended attributes: takes no arguments
============================================

[Replaceable]
interface Foo {};

----

(source_file
	(extended_attribute_list
		(extended_attribute_no_args
			name: (identifier)
		)
	)
	(interface_definition
		name: (type_identifier)
		body: (interface_body)
	)
)


============================================
Extended attributes: takes an argument list (from WebVTT)
============================================

[Constructor(double startTime, double endTime, DOMString text)]
interface VttCue : TextTrackCue {};

----

(source_file
	(extended_attribute_list
		(extended_attribute_arg_list
			name: (identifier)
			arguments: (argument_list
				(argument
					type: (primitive_type (float_type))
					name: (identifier))
				(argument
					type: (primitive_type (float_type))
					name: (identifier))
				(argument
					type: (string_type)
					name: (identifier))
			)
		)
	)
	(interface_definition
		name: (type_identifier)
		(inheritance
			inheriting: (type_identifier))
		body: (interface_body)
	)
)


============================================
Extended attributes: takes a named argument list
============================================

[LegacyFactoryFunction=Image(DOMString src)]
interface Foo {};

----

(source_file
	(extended_attribute_list
		(extended_attribute_named_arg_list
			lhs: (identifier)
			rhs: (identifier)
			arguments: (argument_list
				(argument
					type: (string_type)
					name: (identifier)
				)
			)
		)
	)
	(interface_definition
		name: (type_identifier)
		body: (interface_body)
	)
)


============================================
Extended attributes: takes an identifier
============================================

[PutForwards=name]
interface Foo {};

----

(source_file
	(extended_attribute_list
		(extended_attribute_ident
			lhs: (identifier)
			rhs: (identifier)
		)
	)
	(interface_definition
		name: (type_identifier)
		body: (interface_body)
	)
)

============================================
Extended attributes: takes an identifier list
============================================

[Exposed=(Window,Worker)]
interface Foo {};

----

(source_file
	(extended_attribute_list
		(extended_attribute_ident_list
			name: (identifier)
			identifiers: (identifier_list
				(identifier)
				(identifier)
			)
		)
	)
	(interface_definition
		name: (type_identifier)
		body: (interface_body)
	)
)

============================================
Extended attributes: takes a string
============================================

[Pref="apz.test.logging_enabled",
 Exposed=Window]
namespace APZHitResultFlags {
};

----

(source_file
	(extended_attribute_list
		(extended_attribute_string
			lhs_name: (identifier)
			string: (identifier)
		)
		(extedned_attribute_ident
			lhs_name: (identifier)
			rhs_name: (identifier)
		)
	)
	(namespace_definition
		name: (type_identifier)
		body: (namespace_body)
	)
)

============================================
Extended attributes: takes a wildcard
============================================

[Exposed=*]
interface Foo {};

----

(source_file
	(extended_attribute_list
		(extended_attribute_wildcard
			name: (identifier)
		)
	)
	(interface_definition
		name: (type_identifier)
		body: (interface_body)
	)
)
